Correção de bugs

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <!-- FIM DA SEÇÃO REFEITA -->
 
         <div class="button-container-1">
-            <span class="mas">FINALIZAR</span>
-            <button id='work' type="button" name="Hover">CLICK</button>
+            <span class="mas">GRACIAS</span>
+            <button id="work" type="button" name="Hover">CLICK</button>
         </div>
     </main>
 
